# isaac_ros_mapping_and_localization

./: .gitattributes  .gitignore
isaac_mapping_ros/: CMakeLists.txt  package.xml
isaac_mapping_ros/configs/: data_converter_oak.yaml  data_converter_orbbec.yaml  data_converter_realsense.yaml  data_converter_rgbd.yaml  data_converter_zed.yaml  map_creation_config.yaml
isaac_mapping_ros/foxglove_layouts/: localize_realsense.json
isaac_mapping_ros/include/isaac_mapping_ros/: camera_metadata.hpp  data_converter_utils.hpp  video_decoder.hpp
isaac_mapping_ros/include/isaac_mapping_ros/nvblox_utils/: mapping_data_loader.hpp
isaac_mapping_ros/launch/: localize_realsense.launch.py
isaac_mapping_ros/launch/algorithms/: vslam.launch.py
isaac_mapping_ros/launch/sensors/: realsense.launch.py
isaac_mapping_ros/launch/tools/: foxglove_bridge.launch.py  occupancy_map_server.launch.py  publish_ground_plane.launch.py
isaac_mapping_ros/scripts/: compare_poses.py  convert_ply_ascii_to_bin.py  create_map_offline.py  create_map_utils.py  create_occupancy_e2e.py  create_symlinks.sh  pose_loader.py  pose_plane_fit.py  rectify_images_offline.py  run_ess_trt_offline.py  run_foundationstereo_trt_offline.py  run_stereo_anything.sh  split_repeated_poses.py  stereo_inference_base.py
isaac_mapping_ros/src/: camera_frame_selection.cpp  data_converter_utils.cpp  decode_video.cpp  mapping_pose_to_rosbag.cpp  rosbag_poses_to_tum_format.cpp  rosbag_to_mapping_data.cpp  run_nvblox.cpp  select_frames_meta.cpp  video_decoder.cpp
isaac_mapping_ros/src/lib/nvblox_utils/: mapping_data_loader.cpp
isaac_mapping_ros/tests/: CMakeLists.txt  compare_images.py  mapping_data_loader_test.cpp  test_create_map_offline.sh
isaac_mapping_ros/tests/data/galileo/: frames_meta.json
isaac_ros_occupancy_grid_localizer/: package.xml
isaac_ros_occupancy_grid_localizer/config/: occupancy_grid_localizer_node.yaml
isaac_ros_pointcloud_utils/: package.xml
isaac_ros_pointcloud_utils/config/: pointcloud_to_flatscan_node.yaml
isaac_ros_visual_global_localization/: CMakeLists.txt  package.xml
isaac_ros_visual_global_localization/config/: localizer_config.pb.txt  matching_config.pb.txt  query_map_config.pb.txt  topic_config_nova.yaml  topic_config_orbbec.yaml
isaac_ros_visual_global_localization/include/isaac_ros_visual_global_localization/: apriltag_localization_node.hpp  constants.h  global_localization_mapper_node.hpp  point_cloud_filter_node.hpp  transform_manager.hpp  visual_global_localization_node.hpp
isaac_ros_visual_global_localization/launch/: isaac_ros_visual_global_localization_node.launch.py  run_cuvgl_rosbag_replay.launch.py
isaac_ros_visual_global_localization/launch/include/: visual_global_localization.launch.py
isaac_ros_visual_global_localization/rviz/: omap.rviz
isaac_ros_visual_global_localization/script/: run_apriltag_localization.sh  run_evaluate_relative_localization.sh  run_global_localization_mapper.sh  run_visual_localization.sh  run_visual_mapper_and_localization.sh
isaac_ros_visual_global_localization/src/: apriltag_localization_main.cpp  apriltag_localization_node.cpp  global_localization_mapper_main.cpp  global_localization_mapper_node.cpp  point_cloud_filter_main.cpp  point_cloud_filter_node.cpp  transform_manager.cpp  visual_global_localization_main.cpp  visual_global_localization_node.cpp
