<?xml version="1.0"?>

<!--
 SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights
reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.

 SPDX-License-Identifier: Apache-2.0
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_mapping_ros</name>
  <version>4.0.0</version>
  <description>A thin ROS layer that wraps isaac ros mapping and localization core repo</description>

  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://developer.nvidia.com/isaac-ros/</url>
  <author>Di Zeng</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>isaac_ros_common</build_depend>

  <depend>libgflags-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rosbag2_storage</depend>
  <depend>urdf</depend>
  <depend>eigen</depend>
  <depend>cv_bridge</depend>
  <depend>nvblox_ros</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>isaac_ros_visual_mapping</depend>

  <exec_depend>isaac_common_py</exec_depend>
  <exec_depend>isaac_ros_ess</exec_depend>
  <exec_depend>isaac_ros_visual_slam</exec_depend>
  <exec_depend>isaac_ros_visual_global_localization</exec_depend>
  <exec_depend>isaac_ros_foundationstereo_models_install</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>isaac_ros_r2b_galileo</test_depend>
  <test_depend>isaac_ros_ess_models_install</test_depend>
  <test_depend>isaac_ros_test_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
